external-crates/move/crates/move-compiler/tests/move_2024/typing/lambda_return_invalid_simple.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04007]: incompatible types
  ┌─ tests/move_2024/typing/lambda_return_invalid_simple.move:8:15
  │
8 │         call!<u64>(|| return &0u64);
  │               ^^^            ----- Given: '&u64'
  │               │               
  │               Invalid type annotation
  │               Expected: 'u64'

error[E04007]: incompatible types
  ┌─ tests/move_2024/typing/lambda_return_invalid_simple.move:9:15
  │
9 │         call!<&u64>(|| return 0u64);
  │               ^^^^            ---- Given: 'u64'
  │               │                
  │               Invalid type annotation
  │               Expected: '&u64'

error[E04007]: incompatible types
   ┌─ tests/move_2024/typing/lambda_return_invalid_simple.move:10:15
   │
10 │         call!<(&u64, u8)>(|| return (&0u64, 1u64, 3u64));
   │               ^^^^^^^^^^            ------------------- Given expression list of length 3: '(&u64, u64, u64)'
   │               │                      
   │               Invalid type annotation
   │               Expected expression list of length 2: '(&u64, u8)'
